--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,52 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# IntelliJ IDEA specific
+.idea/
 *.iml
-*.ipr
+*.iws
+out/
+gen/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# OS-specific
 .DS_Store
+Thumbs.db
+
+# Build system
+target/
+build/
+
+# Logs
+*.log
+
+# Maven
+log/
+*.class
+dependency-reduced-pom.xml
+release.properties
+
+# Gradle
+.gradle/
+!gradle/wrapper/gradle-wrapper.jar
+
+# Selenium related
+test-output/
+selenium-screenshots/
+*.swp
+
+# Environment and temporary files
+*.tmp
+*.bak
+*.swo
+*.swn
+
+# Ignore config files
+*.env
+.env.local
+.env.*.local
+
+# Ignore Eclipse files if switching IDEs
+.project
+.classpath
+.settings/
+
+# Optional: Ignore test results or screenshots
+reports/
+screenshots/
